<resources>
    <string name="app_name">BoletinLahermosa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">nombre_usuario@lahermosa.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Prédica</string>
    <string name="menu_slideshow">Oremos Unidos</string>
    <string name="menu_anuncios">Anuncios</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_avisospublic">Avisos Publicitarios</string>
    <string name="menu_nuestareu">Nuestras Reuniones</string>
    <string name="menu_ofresoli">Ofrenda Solidaria</string>
</resources>