<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iglesia2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/pulpito"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/orando"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_anuncios"
            android:icon="@drawable/angel"
            android:title="@string/menu_anuncios" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/inicio"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_avisopublic"
            android:icon="@drawable/uno"
            android:title="@string/menu_avisospublic" />
        <item
            android:id="@+id/nav_nuestrareu"
            android:icon="@drawable/cuatro"
            android:title="@string/menu_nuestareu" />
        <item
            android:id="@+id/nav_ofresoli"
            android:icon="@drawable/tres"
            android:title="@string/menu_ofresoli" />
    </group>
</menu>